--- a/CSS/styles/pred8.css
+++ b/CSS/styles/pred8.css
@@ -55,6 +55,19 @@ h2 {
   color: rgba(250, 4, 4, 0.5);
 }
 
+/*ako se zahtjev npr kao ovaj nalazi kao internal css,
+tko ima prednost? external css ili internal css u head-u?
+internal i external nemaju nikakve prioritete jedan nad drugim
+
+internal se u ovom slučaju stavio prije jer je na vrhu html koda,
+a external dolazi kasnije s naslovima. prednost ima onaj koji dolazi
+zadnji po redu
+
+inline stile ima najveću prednost nad svima, da smo stavili
+zapovijed unutar h1, on bi bio 'glavni'
+
+selektori se grupiraju samo sa zarezima*/
+
 h1,
 h2 {
   text-align: center;
@@ -63,6 +76,13 @@ h2 {
 h1 {
   color: purple;
 }
+
+/*razlika između ovih level elemenata:
+display as inline: poput <span> elementa, unutar linije, bilo kakva promjena visine i širine neće imati utjecaj, zauzme samo onoliko koliko treba
+as inline-block: mogu se mijenjati širina i visina, nešto između inlinea i blocka
+as block: uzima cijelu širinu, počinje u novom redu, poput <p>
+
+block je po prirodi bezobrazan, uzme cijelu širinu roditelja*/
 
 li {
   display: inline-block;
@@ -82,17 +102,19 @@ b {
   font-style: italic;
 }
 
+/*hvata atribut koji ima određenu vrijednost atributa*/
+
 [href="#osimi"] {
   font-size: 24px;
 }
 
-/* traži izdvojenu riječ u value */
+/* traži izdvojenu riječ u value, konkretno tu riječu */
 [hhh~="vodi"] {
   border-radius: 50%;
   overflow: hidden;
 }
 
-/* pocinje sa rjeci popracenom - */
+/* pocinje sa rijeci popracenom - */
 [class|="header"] {
   background-color: yellow;
 }
@@ -110,9 +132,13 @@ b {
   font-weight: 900;
 }
 
+/*mora biti element b, i završavati value na 'ma'*/
+
 b[id$="ma"] {
   color: blue;
 }
+
+/*KOMBINATOR selektora, html element tipa section i da je na tom elementu klasa plavi*/
 
 section.plavi {
   text-decoration: underline;
